--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,11 @@
     font-style: italic;
     font-size: 70px;
     font-family: 'Quicksand', sans-serif; }
-  a:link, a:visited, a:active {
+  :link, :visited, :active {
     text-decoration: none;
     color: black; }
+  ul {
+    display: inline; }
   ul li {
     display: inline;
     margin: 5px;
@@ -25,13 +27,13 @@
     font-weight: bold;
     background-color: #ddcad9; }
   /* Titulos */
-  h2 {
+  h1 {
     text-align: center;
     font-style: italic;
     font-size: 20px;
     font-family: 'Quicksand', sans-serif;
     margin: 35px 50px; }
-  h3 {
+  h2 {
     font-style: italic;
     font-size: 15px;
     font-family: 'Quicksand', sans-serif;
@@ -122,6 +124,12 @@
     height: 150px; }
   .porfolio {
     width: 70%; }
+  .container-fluid {
+    width: 100%;
+    padding-right: var(--bs-gutter-x, 0.75rem);
+    padding-left: var(--bs-gutter-x, 0.75rem);
+    margin-right: auto;
+    margin-left: auto; }
   /* ID */
   #texto {
     width: 100%; }
@@ -134,7 +142,7 @@
     margin: 5px 50px;
     padding: 10px 30px;
     width: 50%; }
-  #Servicios {
+  #servicios {
     color: black;
     font-style: italic;
     font-size: 10px;
@@ -192,11 +200,13 @@
     grid-area: menu;
     text-align: center;
     font-style: italic;
-    font-size: 30px;
+    font-size: 70px;
     font-family: 'Quicksand', sans-serif; }
-  a:link, a:visited, a:active {
+  :link, :visited, :active {
     text-decoration: none;
     color: black; }
+  ul {
+    display: inline; }
   li {
     color: #bdbbb6;
     font-style: italic;
@@ -225,13 +235,13 @@
     background-color: #ddcad9;
     background-image: linear-gradient(315deg, #ddcad9 0%, #d1b1cb 74%); }
   /* Titulos */
-  h2 {
+  h1 {
     text-align: center;
     font-style: italic;
     font-size: 30px;
     font-family: 'Quicksand', sans-serif;
     margin: 50px 100px; }
-  h3 {
+  h2 {
     grid-area: servicios;
     text-align: center;
     font-style: italic;
@@ -285,13 +295,19 @@
     height: 100%; }
   .inicio {
     width: 80%; }
+  .container-fluid {
+    width: 100%;
+    padding-right: var(--bs-gutter-x, 0.75rem);
+    padding-left: var(--bs-gutter-x, 0.75rem);
+    margin-right: auto;
+    margin-left: auto; }
   /*ID*/
   #galeria {
     margin: 15px; }
   #imagen {
     margin: 5px;
     padding: 15px; }
-  #Servicios {
+  #servicios {
     color: black;
     font-style: italic;
     font-size: 25px;
@@ -353,9 +369,11 @@
     font-style: italic;
     font-size: 70px;
     font-family: 'Quicksand', sans-serif; }
-  a:link, a:visited, a:active {
+  :link, :visited, :active {
     text-decoration: none;
     color: black; }
+  ul {
+    display: inline; }
   li {
     color: #bdbbb6;
     font-style: italic;
@@ -367,7 +385,6 @@
     margin-left: 5px;
     margin-bottom: 5px; }
   ul li {
-    display: inline;
     list-style-type: none;
     font-style: italic;
     font-size: 20px;
@@ -384,13 +401,13 @@
     background-color: #ddcad9;
     background-image: linear-gradient(315deg, #ddcad9 0%, #d1b1cb 74%); }
   /* Titulos */
-  h2 {
+  h1 {
     text-align: center;
     font-style: italic;
     font-size: 30px;
     font-family: 'Quicksand', sans-serif;
     margin: 50px 100px; }
-  h3 {
+  h2 {
     grid-area: servicios;
     text-align: center;
     font-style: italic;
@@ -453,6 +470,12 @@
     width: 100%; }
   .video {
     margin: 40px 20% 60px 20%; }
+  .container-fluid {
+    width: 100%;
+    padding-right: var(--bs-gutter-x, 0.75rem);
+    padding-left: var(--bs-gutter-x, 0.75rem);
+    margin-right: auto;
+    margin-left: auto; }
   /* ID */
   #formulario {
     text-align: start;
@@ -466,7 +489,7 @@
     height: 600px; }
   #galeria {
     margin: 10px; }
-  #Servicios {
+  #servicios {
     margin: 0px 15px 10px 15px;
     padding: 15px;
     color: black;
