--- a/scss/_estructura.scss
+++ b/scss/_estructura.scss
@@ -7,12 +7,22 @@
     header{
         background-color: rgba(226, 226, 226, 0.925);
     }
-    nav{
-        text-align: center;
-        font-style: italic;
-        font-size: 70px;
-        font-family: 'Quicksand', sans-serif;
-        }
+    .menu-flex{
+    
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: center;
+    }
+    
+    .logo-flex{
+    
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: center;
+    }
+    
     
         &:link, &:visited, &:active {
             text-decoration:none;
@@ -59,28 +69,10 @@
     
         /*FlexBox*/
     
-        .menu-flex{
-    
-            display: flex;
-            flex-direction: row;
-            flex-wrap: nowrap;
-            justify-content: center;
-        }
-        
-        .logo-flex{
-        
-            display: flex;
-            flex-direction: row;
-            flex-wrap: nowrap;
-            justify-content: center;
-        }
-        
         .columna-flex {
             flex-direction: column;
             align-items: flex-start;
         }
-        
-        
         
         .main-flex {
             display: flex;
@@ -100,9 +92,6 @@
         .grid {
             display: grid;
             grid-template-rows: auto auto auto auto auto auto;
-            
-            
-            
         }
         
         #gridAreas {
@@ -116,14 +105,13 @@
             ; 
             grid-template-columns: auto;
             grid-column-gap: 5px ;
-        
         }
     
     /* Footer */ 
     
     footer{
         text-align: center;
-            color: dimgray;
+        color: dimgray;
         font-style: italic;
         font-size: 25px;
         font-family: 'Quicksand', sans-serif;
@@ -241,28 +229,12 @@
 
         /*FlexBox*/
 
-.menu-flex{
-
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center;
-}
-
 .mapa-flex{
 
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content:center;
-}
-
-.logo-flex{
-
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center;
 }
 
 .video-flex{
@@ -306,7 +278,20 @@ header{
     height:  400px;
     border: 1px solid grey;
 }
+.menu-flex{
 
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+}
+.logo-flex{
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+}
 
 nav{
 
@@ -329,6 +314,7 @@ ul{
 }
 
 li{
+    display: inline;
     color: rgb(189, 187, 182);
     font-style: italic;
     font-size: small;
@@ -459,7 +445,7 @@ aside{
     padding-left: var(--bs-gutter-x, 0.75rem);
     margin-right: auto;
     margin-left: auto;
-  }
+}
 
 /*ID*/ 
 
@@ -590,6 +576,7 @@ ul{
 }
 
 li{
+    display: inline;
     color: rgb(189, 187, 182);
     font-style: italic;
     font-size: small;
