--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,16 @@
   /* Menu*/
   header {
     background-color: rgba(226, 226, 226, 0.925); }
-  nav {
-    text-align: center;
-    font-style: italic;
-    font-size: 70px;
-    font-family: 'Quicksand', sans-serif; }
+  .menu-flex {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center; }
+  .logo-flex {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center; }
   :link, :visited, :active {
     text-decoration: none;
     color: black; }
@@ -39,16 +44,6 @@
     font-family: 'Quicksand', sans-serif;
     margin: 40px 120px 50px 100px; }
   /*FlexBox*/
-  .menu-flex {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center; }
-  .logo-flex {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center; }
   .columna-flex {
     flex-direction: column;
     align-items: flex-start; }
@@ -158,17 +153,7 @@
 /*TABLET*/
 @media (min-width: 481px) and (max-width: 1023px) {
   /*FlexBox*/
-  .menu-flex {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center; }
   .mapa-flex {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center; }
-  .logo-flex {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -196,6 +181,16 @@
     grid-area: cabeza;
     height: 400px;
     border: 1px solid grey; }
+  .menu-flex {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center; }
+  .logo-flex {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center; }
   nav {
     grid-area: menu;
     text-align: center;
@@ -208,6 +203,7 @@
   ul {
     display: inline; }
   li {
+    display: inline;
     color: #bdbbb6;
     font-style: italic;
     font-size: small;
@@ -375,6 +371,7 @@
   ul {
     display: inline; }
   li {
+    display: inline;
     color: #bdbbb6;
     font-style: italic;
     font-size: small;
